# tweek

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY-ARCHITECTURE-REPORT.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.claude/: settings.json  settings.json.tweek-backup
.claude/agents/: skill-evaluator.md
.claude/skills/pypi-publish/: SKILL.md
.claude/skills/tweek/: SKILL.md  overrides-reference.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ATTACK_PATTERNS.md  CLI_REFERENCE.md  COMPARISON.md  CONFIGURATION.md  DEFENSE_LAYERS.md  DRY_RUN.md  FEATURES.md  HTTP_PROXY.md  LICENSING.md  LOGGING.md  MCP_INTEGRATION.md  MEMORY.md  PHILOSOPHY.md  PLUGINS.md  TROUBLESHOOTING.md  VAULT.md
formal/: lakefile.lean
formal/Tweek/: Decision.lean  Invariants.lean  Provenance.lean  Taint.lean  Taxonomy.lean
formal/codegen/: decision_table.json  export_decision_table.py
scripts/: PUBLISHING.md  add_family_field.py  demo.tape  demo_terminal.py  enrich_patterns.py  install.sh  test_hook_manually.sh
services/license-server/: README.md  main.py
skills/tweek-claude-code/scripts/: check_installed.py
skills/tweek-security/: SKILL.md
test-mcp-sandbox/: test_isolated.py
tests/: __init__.py  conftest.py  test_action_provenance.py  test_approval_queue.py  test_audit.py  test_break_glass.py  test_cli.py  test_cli_configure.py  test_cli_helpers.py  test_config_manager.py  test_config_models.py  test_config_templates.py  test_credential_scanner.py  test_cross_skill_analyzer.py  test_diagnostics.py  test_enforcement.py  test_evaluator.py  test_feedback.py  test_file_watch.py  test_hardshell_patterns.py  test_hash_chain.py  test_heuristic_chaining.py  test_heuristic_scorer.py  test_install_flow.py  test_install_resilience.py  test_installer_improvements.py  test_language_detection.py  test_licensing.py  test_llm_local.py  test_llm_reviewer.py  test_llm_reviewer_lazy.py  test_local_model.py  test_local_model_escalation.py  test_log_bundle.py  test_logging.py  test_logging_enhanced.py  test_mcp_clients.py  test_mcp_proxy.py  test_mcp_server.py  test_memory_scoped.py  (+36 more)
tests/test_hooks/: test_pre_tool_use.py
tests/test_memory/: test_integration.py  test_queries.py  test_safety.py  test_store.py
tests/test_plugins/: __init__.py  test_compliance.py  test_detectors.py  test_git_discovery.py  test_git_installer.py  test_git_lockfile.py  test_git_registry.py  test_git_security.py  test_providers.py  test_registry.py
tests/test_proxy/: test_addon.py  test_interceptor.py  test_server.py
tests/test_sandbox/: test_docker_bridge.py  test_layers.py  test_profile_generator.py  test_project.py  test_registry.py
tests/test_skills/: test_fingerprints.py  test_guard.py  test_isolation.py  test_scanner.py
tests/test_vault/: test_keychain.py
tweek/: __init__.py  _keygen.py  audit.py  cli.py  cli_config.py  cli_configure.py  cli_core.py  cli_dry_run.py  cli_evaluate.py  cli_helpers.py  cli_install.py  cli_logs.py  cli_mcp.py  cli_memory.py  cli_model.py  cli_patterns.py  cli_pii.py  cli_plugins.py  cli_protect.py  cli_proxy.py  cli_scan.py  cli_security.py  cli_skills.py  cli_uninstall.py  cli_vault.py  cli_watch.py  diagnostics.py  evaluator.py  licensing.py  scan.py
tweek-openclaw-plugin/: package-lock.json  package.json
tweek-openclaw-plugin/src/: agent-context.ts  config-guard.ts  config.ts  index.ts  mcp-screener.ts  message-scanner.ts  notifications.ts  output-scanner.ts  scanner-bridge.ts  session-tracker.ts  skill-guard.ts  tool-screener.ts
tweek-openclaw-plugin/tests/: config.test.ts  scanner-bridge.test.ts
tweek/config/: __init__.py  allowed_dirs.yaml  families.yaml  manager.py  models.py  patterns.yaml  patterns.yaml.sig  signing_keys.py  soul.py  taxonomy.py  templates.py  tiers.yaml
tweek/config/templates/: config.yaml.template  env.template  overrides.yaml.template  soul.md.template  tweek.yaml.template
tweek/hooks/: break_glass.py  feedback.py  overrides.py  post_tool_use.py  pre_tool_use.py  wrapper_post_tool_use.py  wrapper_pre_tool_use.py
tweek/integrations/: message_scanner.py  openclaw.py  openclaw_detection.py  openclaw_server.py
tweek/logging/: bundle.py  security_log.py
tweek/mcp/: __init__.py  approval.py  approval_cli.py  proxy.py  screening.py  server.py
tweek/mcp/clients/: chatgpt.py  claude_desktop.py  gemini.py
tweek/memory/: __init__.py  provenance.py  queries.py  safety.py  schemas.py  store.py
tweek/platform/: __init__.py
tweek/plugins/: __init__.py  base.py  git_discovery.py  git_registry.py  git_security.py
tweek/plugins/detectors/: __init__.py  openclaw.py
tweek/plugins/screening/: __init__.py  heuristic_scorer.py  llm_reviewer.py  local_model_reviewer.py  pattern_matcher.py  rate_limiter.py  session_analyzer.py
tweek/provenance/: __init__.py  action_provenance.py
tweek/proxy/: __init__.py  addon.py  interceptor.py  server.py
tweek/rules/yara/: autonomy_abuse_generic.yara  capability_inflation_generic.yara  code_execution_generic.yara  coercive_injection_generic.yara  command_injection_generic.yara  credential_harvesting_generic.yara  indirect_prompt_injection_generic.yara  prompt_injection_generic.yara  prompt_injection_unicode_steganography.yara  script_injection_generic.yara  (+3 more)
tweek/sandbox/: __init__.py  docker_bridge.py  executor.py  layers.py  linux.py  project.py  registry.py
tweek/screening/: context.py
tweek/scripts/: uninstall.sh
tweek/security/: __init__.py  cross_skill_analyzer.py  file_watch.py  integrity.py  language.py  llm_reviewer.py  local_model.py  local_reviewer.py  model_registry.py  pattern_signer.py  pii_scanner.py  pii_tokenizer.py  rate_limiter.py  secret_scanner.py  session_analyzer.py  taint_analyzer.py  token_store.py  yara_scanner.py
tweek/skill_template/: SKILL.md  cli-reference.md  overrides-reference.md
tweek/skills/: __init__.py  config.py  context.py  fingerprints.py  guard.py  isolation.py  scanner.py
tweek/tools/: __init__.py  registry.py
tweek/vault/: __init__.py  cross_platform.py  keychain.py
website/: index.html  script.js  styles.css
(+2 files in other folders)
