[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tweek"
version = "0.4.9"
description = "Defense-in-depth security for AI coding assistants - protect credentials, code, and system from prompt injection attacks"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Tommy Mancino"}
]
keywords = ["claude", "security", "dry-run", "ai", "llm", "tweek", "claude-code", "prompt-injection", "mcp", "credential-theft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
]
local-models = [
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
]
linux = [
    "secretstorage>=3.0",  # For GNOME Keyring / Secret Service on Linux
]
mcp = [
    "mcp>=1.0.0",  # Model Context Protocol SDK for desktop app integration
]
proxy = [
    "mitmproxy>=10.0",  # HTTPS interception proxy for universal LLM protection
]
yara = [
    "yara-python>=4.3.0",  # YARA pattern matching engine for skill scanning
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.98.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "twine>=4.0",
    "build>=1.0",
]
all = [
    "tweek[llm,local-models,mcp,proxy,yara]",  # Full installation with all features
]

[project.scripts]
tweek = "tweek.cli:main"

# Plugin entry points for discovery
[project.entry-points."tweek.compliance"]
gov = "tweek.plugins.compliance:GovCompliancePlugin"
hipaa = "tweek.plugins.compliance:HIPAACompliancePlugin"
pci = "tweek.plugins.compliance:PCICompliancePlugin"
legal = "tweek.plugins.compliance:LegalCompliancePlugin"
soc2 = "tweek.plugins.compliance:SOC2CompliancePlugin"
gdpr = "tweek.plugins.compliance:GDPRCompliancePlugin"

[project.entry-points."tweek.llm_providers"]
anthropic = "tweek.plugins.providers:AnthropicProvider"
openai = "tweek.plugins.providers:OpenAIProvider"
azure_openai = "tweek.plugins.providers:AzureOpenAIProvider"
google = "tweek.plugins.providers:GoogleProvider"
bedrock = "tweek.plugins.providers:BedrockProvider"

[project.entry-points."tweek.tool_detectors"]
openclaw = "tweek.plugins.detectors:OpenClawDetector"
cursor = "tweek.plugins.detectors:CursorDetector"
continue = "tweek.plugins.detectors:ContinueDetector"
copilot = "tweek.plugins.detectors:CopilotDetector"
windsurf = "tweek.plugins.detectors:WindsurfDetector"

[project.entry-points."tweek.screening"]
rate_limiter = "tweek.plugins.screening:RateLimiterPlugin"
pattern_matcher = "tweek.plugins.screening:PatternMatcherPlugin"
heuristic_scorer = "tweek.plugins.screening:HeuristicScorerPlugin"
llm_reviewer = "tweek.plugins.screening:LLMReviewerPlugin"
local_model_reviewer = "tweek.plugins.screening:LocalModelReviewerPlugin"
session_analyzer = "tweek.plugins.screening:SessionAnalyzerPlugin"

[project.urls]
Homepage = "https://gettweek.com"
Repository = "https://github.com/gettweek/tweek"
Issues = "https://github.com/gettweek/tweek/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tweek*"]
exclude = ["website*", "tests*", "scripts*", "test-environment*", "docs*"]

[tool.setuptools.package-data]
tweek = [
    "config/*.yaml",
    "config/_integrity.json",
    "config/templates/*",
    "rules/yara/*.yara",
    "skill_template/*.md",
    "skill_template/scripts/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=tweek --cov-report=term-missing --cov-fail-under=60 -m 'not integration'"
markers = [
    "patterns: Regex pattern matching and prompt injection detection (slow, ~37s)",
    "hooks: Pre/post tool use hook pipeline and path boundary escalation",
    "cli: CLI commands (install, uninstall, protect, config, license, logs, update)",
    "plugins: Plugin system (git registry, lockfile, compliance, discovery, security)",
    "sandbox: Dry-run execution, project isolation, and Docker bridge",
    "skills: Skill scanning, isolation, fingerprints, and guard",
    "mcp: MCP proxy, server, and desktop client integration",
    "security: Credential scanning, redaction, break-glass, enforcement, overrides",
    "logging: Event logging, enhanced logging, and log bundles",
    "config: Configuration manager and licensing",
    "memory: Memory store, safety, and query system",
    "core: Approval queue, audit, diagnostics, feedback, rate limiting, sessions",
    "local_model: Local ONNX model inference, registry, and CLI commands",
    "integration: End-to-end integration tests with isolated venv install (slow)",
    "enrichment: CTAP enrichment validation for patterns.yaml",
    "taxonomy: CTAP-compatible taxonomy mapping tests",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "S",    # flake8-bandit (security)
    "B",    # flake8-bugbear
    "A",    # flake8-builtins (shadowing built-ins)
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print (no print in library code)
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "S101",   # assert is fine in tests
    "S603",   # subprocess calls are intentional (sandbox executor)
    "S607",   # partial executable path (sandbox uses /usr/bin/sandbox-exec)
    "T201",   # print is used in hook scripts (stdout is the protocol)
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "T201"]
"tweek/hooks/**" = ["T201"]  # Hooks communicate via stdout

[tool.coverage.run]
branch = true
source = ["tweek"]
omit = [
    "tweek/sandbox/linux.py",
    "tweek/skill_template/*",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
]
